--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,27 +82,20 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         twine upload --repository pypi dist/*
-  generate_docs:
-    runs-on: ubuntu-latest
+    generate_docs_with_quarto:
+      runs-on: ubuntu-latest
     
-    steps:
-    - uses: actions/checkout@v3
+      steps:
+      - uses: actions/checkout@v3
       
-    - name: Setup Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.x'
-        
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install mkdocs mkdocs-material
-        
-    - name: Build Documentation
-      run: mkdocs build
+    - name: Setup Quarto CLI
+      uses: quarto-dev/quarto-cli-github-action@v1
+
+    - name: Generate Documentation
+      run: quarto render
       
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./site
+        publish_dir: ./_site
