--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,13 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-      
+    - name: Clear Cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache
+        key: ${{ runner.os }}-cache  # Уникальный ключ для кеша
+        restore-keys: |
+          ${{ runner.os }}-cache
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
       
