--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,11 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-      
+    - name: Clear Cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache
+        key: ${{ runner.os }}-cache
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
