--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,11 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-      
+    - name: Clear Cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache
+        key: ${{ runner.os }}-cache
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
