--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,8 +101,13 @@ jobs:
     
       steps:
       - uses: actions/checkout@v3
+      - name: Clear Cache
+          uses: actions/cache@v2
+          with:
+            path: ~/.cache
+            key: ${{ runner.os }}-cache
       - name: Setup Quarto
-        uses: cuarto-dev/quarto-full:1.7.5  # Quarto полная версия
+        uses: quarto-dev/quarto-cli@latest
 
     - name: Generate Documentation
       run: quarto render
