--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         pip install flake8 black[jupyter]
         
     - name: Run linter
-      run: flake8 .
+      run: flake8 . --exclude=setup.py
       
     - name: Check code formatting
       run: black . --check
