--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: CI/CD Pipeline
-
 on:
   push:
     branches: ["main"]
@@ -8,7 +7,6 @@ on:
 jobs:
   build_docker_image:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v3
     - name: Clear Cache
@@ -20,16 +18,13 @@ jobs:
           ${{ runner.os }}-cache
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
-      
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-      
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
     - name: Build and push
       id: docker_build
       uses: docker/build-push-action@v3
@@ -42,7 +37,6 @@ jobs:
           imkyznetsov/MLOps1:latest
   lint_and_format_code:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v3
     - name: Clear Cache
@@ -54,15 +48,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 black[jupyter]
-        
     - name: Run linter
       run: flake8 . --exclude=setup.py
-      
     - name: Check code formatting
-      run: black . --check
+      run: black . --exclude=setup.py
   publish_package:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v3
     - name: Clear Cache
