--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
+
+    - name: Clean old artifacts
+      run: rm -rf dist/
         
     - name: Build package
       run: |
@@ -94,7 +97,7 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         twine upload --repository pypi dist/*
-        
+
     generate_docs_with_quarto:
       runs-on: ubuntu-latest
     
