--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
-        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -112,9 +111,8 @@ jobs:
         run: quarto --version  # Проверяем, что Quarto установлен правильно
       - name: Generate Documentation
         run: quarto render # Убедиться, что у есть файл _quarto.yml или другие документы для рендеринга
-      
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_site
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs
