--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Check Quarto version
         run: quarto --version  # Проверяем, что Quarto установлен правильно
       - name: Generate Documentation
-        run: quarto render # Убедиться, что у есть файл _quarto.yml или другие документы для рендеринга
+        run: quarto render # Убедиться, что есть файл _quarto.yml или другие документы для рендеринга
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
