--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,8 +97,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y wget gdebi-core
-        wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.6.38/quarto-linux-amd64.deb
-        sudo gdebi -n quarto-linux-amd64.deb
+        wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.6.40/quarto-1.6.40-linux-amd64.deb
+        sudo gdebi -n quarto-1.6.40-linux-amd64.deb
     - name: Check Quarto version
       run: quarto --version  # Проверяем, что Quarto установлен правильно
     - name: Generate Documentation
